# homey-ai-hub

./: .gitignore  .homeychangelog.json  .homeyignore  INTEGRATION_TEST_NOTES.md  LICENSE  README.md  README.txt  api.py  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.homeycompose/: app.json
.homeycompose/flow/actions/: ai.json  ai_custom.json  ai_image.json  ai_image_custom.json  ask_ai.json  ask_ai_with_image.json  clear_conversation.json
.homeycompose/flow/triggers/: ai_response_received.json  webhook_received.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-ai-integration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-conversation-memory-and-system-prompts/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-vision-support/: 03-01-PLAN.md  03-01-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-app-store-polish/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-03-13-unified-cards-fallback.md
lib/: conversation_store.py  homey_api.py  smart_home.py
lib/providers/: base.py  claude.py  ollama_provider.py  openai_provider.py
locales/: en.json
settings/: index.html
tests/: conftest.py  test_claude_provider.py  test_conversation_store.py  test_ollama_provider.py
