[project]
name = "homey-ai-hub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "ollama>=0.6.1",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
